2005-07-26  Mark Wielaard  <mark@klomp.org>

	* gnu/java/nio/channels/FileChannelImpl.java (lockCheck): New method.
	(tryLock): Use lockCheck().
	(lock): Likewise.

2005-07-26  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/target/generic/target_generic_network.h
	(TARGET_NATIVE_NETWORK_SOCKET_SET_OPTION_SO_TIMEOUT): Added 
	missing sys/time.h include.

2005-07-26  Mark Wielaard  <mark@klomp.org>

	* gnu/java/nio/channels/FileChannelImpl.java (description):
	New final field.
	(FileChannelImpl): Set description.
	(init): Likewise.
	(toString): New method.
	All methods add parameters when throwing IllegalArgumentException.
	* native/jni/java-nio/gnu_java_nio_channels_FileChannelImpl.c
	(open): Add filename to FileNotFoundException.

2005-07-26  Jeroen Frijters  <jeroen@frijters.net>

	* NEWS: Added comment about new VMProxy class.
	* gnu/classpath/Configuration.java.in
	(HAVE_NATIVE_GET_PROXY_CLASS): Removed.
	(HAVE_NATIVE_GET_PROXY_DATA): Removed.
	(HAVE_NATIVE_GENERATE_PROXY_CLASS): Removed.
	* java/lang/reflect/Proxy.java
	(getProxyClass): Changed to call VMProxy.
	(getProxyClass0): Removed.
	(getProxyData0): Removed.
	(generateProxyClass0): Removed.
	(ProxyData): Removed private modifier.
	(POOL): Removed (was unused).
	(INVOKESTATIC): Removed (was unused).
	* vm/reference/java/lang/reflect/VMProxy.java: New file.

2005-07-26  Jeroen Frijters  <jeroen@frijters.net>

	* NEWS: Added comment about new VM hook in VMClassLoader.

2005-07-26  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/DateFormatter.java: API doc fixes,
	* javax/swing/text/InternationalFormatter.java: likewise,
	* javax/swing/text/JTextComponent.java: likewise.
	
2005-07-26  Mark Wielaard  <mark@klomp.org>

	* examples/Makefile.am (clean-local): Use rm -rf.

2005-07-26  Jeroen Frijters  <jeroen@frijters.net>

	* vm/reference/java/lang/VMClassLoader.java
	(USE_VM_CACHE): Removed final modifier.

2005-07-25  Thomas Fitzsimmons  <fitzsim@redhat.com>
